package com.example.smartagritest;

import com.example.smartagritest.LiveStockManagementServiceGrpc.LiveStockManagementServiceImplBase;
import io.grpc.stub.StreamObserver;

public class LiveStockManagementServiceImpl extends LiveStockManagementServiceImplBase {

    @Override
    public void addLivestock(AddLiveStockRequest request, StreamObserver<AddLiveStockResponse> responseObserver) {
        // Implement your logic for adding a livestock here.

        AddLiveStockResponse response = AddLiveStockResponse.newBuilder()
                .setMessage("Livestock added successfully.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void removeLivestock(RemoveLiveStockRequest request, StreamObserver<RemoveLiveStockResponse> responseObserver) {
        // Implement your logic for removing a livestock here.

        RemoveLiveStockResponse response = RemoveLiveStockResponse.newBuilder()
                .setMessage("Livestock removed successfully.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void updateLivestock(UpdateLiveStockRequest request, StreamObserver<UpdateLiveStockResponse> responseObserver) {
        // Implement your logic for updating a livestock here.

        UpdateLiveStockResponse response = UpdateLiveStockResponse.newBuilder()
                .setMessage("Livestock updated successfully.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void getLivestock(GetLiveStockRequest request, StreamObserver<GetLiveStockResponse> responseObserver) {
        // Implement your logic for retrieving a specific livestock here.

        // Replace this example livestock with the actual livestock data.
        LiveStock exampleLivestock = LiveStock.newBuilder()
                .setName("Example")
                .setType("Cow")
                .setBirthDate("2022-01-01")
                .setQuantity(1)
                .build();

        GetLiveStockResponse response = GetLiveStockResponse.newBuilder()
                .setLiveStock(exampleLivestock)
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void feedLivestock(FeedLiveStockRequest request, StreamObserver<FeedLiveStockResponse> responseObserver) {
        // Implement your logic for feeding a specific livestock here.

        FeedLiveStockResponse response = FeedLiveStockResponse.newBuilder()
                .setMessage("Livestock fed successfully.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void waterLivestock(WaterLiveStockRequest request, StreamObserver<WaterLiveStockResponse> responseObserver) {
        // Implement your logic for watering a specific livestock here.

        WaterLiveStockResponse response = WaterLiveStockResponse.newBuilder()
                .setMessage("Livestock watered successfully.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void vaccinateLivestock(VaccinateLiveStockRequest request, StreamObserver<VaccinateLiveStockResponse> responseObserver) {
        // Implement your logic for vaccinating a specific livestock here.

        VaccinateLiveStockResponse response = VaccinateLiveStockResponse.newBuilder()
                .setMessage("Livestock vaccinated successfully.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }
}